# hnix-store

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  Test.hs  build.sh  cabal.project  cabal.project.local.ci  ci.dhall  default.nix  docs.sh  hie.yaml  hnix-store.cabal  hydra.json  jobsets.nix  matrix.nix  nix-derivation.cabal  overlay.nix  pre-release.sh  release.nix  release.sh  shell.nix
.github/workflows/: Cabal-Linux-Remote.yml  Cabal-Linux.yml  Cabal-macOS.yml  ci.dhall  ci.sh  (+12 more)
Nix/: LocalStore.hs  RemoteStore.hs  Settings.hs  Store.hs  Types.hs
docs/: 00-Prelude.org  01-Contributors.org  02-Hacking.org
hnix-store-aterm/: README.md  hnix-store-aterm.cabal
hnix-store-aterm/bench/: Main.hs
hnix-store-aterm/pretty-derivation/: Main.hs
hnix-store-aterm/src/System/Nix/Derivation/: ATerm.hs  Traditional.hs
hnix-store-aterm/src/System/Nix/Derivation/ATerm/: Builder.hs  Parser.hs
hnix-store-aterm/tests/: Derivation.hs  DerivationSpec.hs  Example.hs  Property.hs  example0.drv  example1.drv
hnix-store-binary/: LICENSE  hnix-store-binary.cabal  shell.nix
hnix-store-core/: CHANGELOG.md  ChangeLog.md  README.md  hnix-store-core.cabal  shell.nix
hnix-store-core/src/Crypto/Hash/: Truncated.hs
hnix-store-core/src/System/Nix/: Base.hs  Base32.hs  Build.hs  ContentAddress.hs  Derivation.hs  DerivedPath.hs  FileContentAddress.hs  Fingerprint.hs  GC.hs  Hash.hs  Nar.hs  OutputName.hs  Path.hs  Placeholder.hs  ReadonlyStore.hs  Realisation.hs  Signature.hs  Store.hs  StorePath.hs  StorePathMetadata.hs  Util.hs  ValidPath.hs
hnix-store-core/src/System/Nix/Derivation/: Aterm.hs
hnix-store-core/src/System/Nix/Hash/: Truncation.hs
hnix-store-core/src/System/Nix/Internal/: Base.hs  Base32.hs  Hash.hs  Nar.hs  Old.hs  Path.hs  Signature.hs  SriHash.hs  StorePath.hs  TruncatedHash.hs  Truncation.hs  Uncycle.hs
hnix-store-core/src/System/Nix/Internal/Nar/: Effects.hs  Options.hs  Parser.hs  Streamer.hs
hnix-store-core/src/System/Nix/Nar/: Effects.hs  Options.hs  Parser.hs  Streamer.hs
hnix-store-core/src/System/Nix/Store/: Types.hs
hnix-store-core/src/System/Nix/StorePath/: ContentAddressed.hs  Metadata.hs
hnix-store-core/tests/: Arbitrary.hs  ContentAddress.hs  ContentAddressableAddress.hs  Derivation.hs  DerivedPath.hs  Fingerprint.hs  Hash.hs  NarFormat.hs  Path.hs  Placeholder.hs  ReadOnly.hs  Signature.hs  StorePath.hs
hnix-store-core/tests/fixtures/: case-conflict.nar
hnix-store-core/tests/samples/: example0.drv  example1.actual
hnix-store-db/: CHANGELOG.md  LICENSE  README.md  hnix-store-db.cabal
hnix-store-db/apps/: Bench.hs
hnix-store-db/src/System/Nix/Store/: DB.hs
hnix-store-db/src/System/Nix/Store/DB/: Instances.hs  Query.hs  Run.hs  Schema.hs  Util.hs
hnix-store-db/tests/: Smoke.hs
hnix-store-json/: CHANGELOG.md  README.md  hnix-store-json.cabal  upstream-libstore-data  upstream-libutil-data
hnix-store-json/src/System/Nix/: JSON.hs
hnix-store-json/tests/: BuildResultSpec.hs  ContentAddressSpec.hs  DerivationSpec.hs  DerivedPathSpec.hs  HashSpec.hs  JSONSpec.hs  OutputsSpecSpec.hs  PathInfoSpec.hs  RealisationSpec.hs  SingleDerivedPathSpec.hs  StorePathSpec.hs  UpstreamData.hs
hnix-store-nar/: CHANGELOG.md  README.md  hnix-store-nar.cabal
hnix-store-nar/src/System/Nix/: Nar.hs
hnix-store-nar/src/System/Nix/Nar/: Effects.hs  Options.hs  Parser.hs  Streamer.hs
hnix-store-nar/tests/: NarFormat.hs
hnix-store-nar/tests/fixtures/: .gitignore  generate-fixtures.sh
hnix-store-readonly/: CHANGELOG.md  README.md  hnix-store-readonly.cabal
hnix-store-readonly/src/System/Nix/Store/: ReadOnly.hs
hnix-store-readonly/tests/: ReadOnlySpec.hs
hnix-store-remote/: CHANGELOG.md  ChangeLog.md  README.md  cabal.project  hnix-store-remote.cabal  shell.nix
hnix-store-remote/app/: BuildDerivation.hs  Main.hs
hnix-store-remote/src/Data/: Serializer.hs
hnix-store-remote/src/Data/Serializer/: Example.hs
hnix-store-remote/src/System/Nix/Store/: Remote.hs
hnix-store-remote/src/System/Nix/Store/Remote/: Arbitrary.hs  Binary.hs  Builders.hs  Client.hs  GADT.hs  Logger.hs  MonadStore.hs  Parsers.hs  Protocol.hs  Serialize.hs  Serializer.hs  Server.hs  Socket.hs  Types.hs  Util.hs
hnix-store-remote/src/System/Nix/Store/Remote/Client/: Core.hs
hnix-store-remote/src/System/Nix/Store/Remote/Serialize/: Prim.hs
hnix-store-remote/src/System/Nix/Store/Remote/Types/: Activity.hs  CheckMode.hs  GC.hs  Handshake.hs  Logger.hs  NoReply.hs  ProtoVersion.hs  Query.hs  StoreConfig.hs  StoreReply.hs  StoreRequest.hs  StoreText.hs  SubstituteMode.hs  SuccessCodeReply.hs  TrustedFlag.hs  Verbosity.hs  WorkerMagic.hs  WorkerOp.hs
hnix-store-remote/src/System/Nix/Store/Remote/Types/Query/: Missing.hs
hnix-store-remote/tests/: Derivation.hs  Driver.hs  EnumSpec.hs  NixDaemon.hs  NixSerializerSpec.hs  Operations.hs  SerializeSpec.hs  Spec.hs  Util.hs
hnix-store-remote/tests-io/: DataSink.hs  Main.hs  NixDaemon.hs  NixDaemonSpec.hs  SampleNar.hs
hnix-store-remote/tests/Data/: SerializerSpec.hs
hnix-store-s3/: hnix-store-s3.cabal  shell.nix
hnix-store-s3/src/System/Nix/Store/: S3.hs
hnix-store-tests/: CHANGELOG.md  README.md  hnix-store-tests.cabal
hnix-store-tests/src/Data/ByteString/: Arbitrary.hs
hnix-store-tests/src/Data/HashSet/: Arbitrary.hs
hnix-store-tests/src/Data/Text/: Arbitrary.hs
hnix-store-tests/src/Data/Vector/: Arbitrary.hs
hnix-store-tests/src/System/Nix/: Arbitrary.hs
hnix-store-tests/src/System/Nix/Arbitrary/: Base.hs  Build.hs  ContentAddress.hs  Derivation.hs  DerivedPath.hs  FileContentAddress.hs  Hash.hs  OutputName.hs  Realisation.hs  Signature.hs  StorePath.hs  UTCTime.hs
hnix-store-tests/src/System/Nix/Arbitrary/Store/: Types.hs
hnix-store-tests/src/System/Nix/Arbitrary/StorePath/: Metadata.hs
hnix-store-tests/src/Test/Hspec/: Nix.hs
hnix-store-tests/tests/: BaseEncodingSpec.hs  ContentAddressSpec.hs  DerivationSpec.hs  DerivedPathSpec.hs  RealisationSpec.hs  SignatureSpec.hs  StorePathSpec.hs
nix-derivation/: README.md  nix-derivation.cabal  shell.nix
tests/: Example.hs  Property.hs
(+15 files in other folders)
