name:                hnix-store
version:             0.1.0.0
synopsis:            Haskell implementation of the nix store API
description:
  Haskell implementation of the nix store API
homepage:            https://github.com/shlevy/hnix-store
license:             MIT
license-file:        LICENSE
author:              Shea Levy
maintainer:          shea@shealevy.com
copyright:           Copyright (c) 2014 Shea Levy
category:            System, Nix
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Nix.Store, Nix.LocalStore, Nix.Types
  build-depends:       base >=4.3 && <5,
                       resourcet,
                       sqlite-simple,
                       unordered-containers,
                       text,
                       bytestring,
                       time,
                       base16-bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall

executable test
  default-language: Haskell2010
  main-is: Test.hs
  build-depends:    base >=4.3 && <5,
                    hnix-store,
                    sqlite-simple,
                    resourcet,
                    setenv,
                    temporary,
                    process,
                    filepath,
                    transformers,
                    unordered-containers,
                    text,
                    time,
                    bytestring,
                    base16-bytestring
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/shlevy/hnix-store.git
