Name: nix-derivation
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Nix-Derivation-Library/issues
Synopsis: Parse and render *.drv files
Description:
    Use this package to parse and render Nix derivation files (i.e. *.drv files)
Category: System
Extra-Source-Files:
    tests/example0.drv
    tests/example1.drv
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Nix-Derivation-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base            >= 4.6.0.0  && < 5   ,
        attoparsec      >= 0.12.0.0 && < 0.14,
        containers                     < 0.6 ,
        deepseq         >= 1.4.0.0  && < 1.5 ,
        system-filepath >= 0.3.1    && < 0.5 ,
        text            >= 0.8.0.0  && < 1.3 ,
        vector                         < 0.13
    Exposed-Modules:
        Nix.Derivation
    Other-Modules:
        Nix.Derivation.Builder,
        Nix.Derivation.Parser,
        Nix.Derivation.Types
    GHC-Options: -Wall

Test-Suite example
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests
    Main-Is: Example.hs
    GHC-Options: -Wall
    Build-Depends:
        base           >= 4.6.0.0  && < 5   ,
        attoparsec     >= 0.12.0.0 && < 0.14,
        nix-derivation                      ,
        text           >= 0.8.0.0  && < 1.3

Test-Suite property
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests
    Main-Is: Property.hs
    GHC-Options: -Wall
    Build-Depends:
        base            >= 4.6.0.0  && < 5   ,
        attoparsec      >= 0.12.0.0 && < 0.14,
        nix-derivation                       ,
        QuickCheck                     < 2.10,
        system-filepath >= 0.3.1    && < 0.5 ,
        text            >= 0.8.0.0  && < 1.3 ,
        vector                         < 0.13

Benchmark benchmark
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   bench
    Main-Is:          Main.hs
    GHC-Options:      -Wall

    Build-Depends:
        base            >= 4.6.0.0  && < 5   ,
        attoparsec      >= 0.12.0.0 && < 0.14,
        criterion       >= 1.1.4.0  && < 1.3 ,
        nix-derivation                       ,
        text            >= 0.8.0.0  && < 1.3
