cabal-version:       2.2
name:                hnix-store-core
version:             0.8.0.0
synopsis:            Core types used for interacting with the Nix store.
description:
  This package contains types and functions needed to describe
  interactions with the Nix store.
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Shea Levy
maintainer:          srk@48.io
copyright:           2018 Shea Levy
category:            Nix
build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , tests/samples/example0.drv
  , tests/samples/example1.drv

common commons
  ghc-options:  -Wall
  default-extensions:
      ConstraintKinds
    , DataKinds
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveLift
    , DerivingStrategies
    , DerivingVia
    , ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , GADTs
    , ScopedTypeVariables
    , StandaloneDeriving
    , RecordWildCards
    , TypeApplications
    , TypeFamilies
    , TypeOperators
    , TypeSynonymInstances
    , InstanceSigs
    , KindSignatures
    , MultiParamTypeClasses
    , MultiWayIf
    , TupleSections
    , LambdaCase
    , BangPatterns
    , ViewPatterns
  default-language: Haskell2010

library
  import: commons
  exposed-modules:
      System.Nix.Base
    , System.Nix.Base32
    , System.Nix.Build
    , System.Nix.ContentAddress
    , System.Nix.Derivation
    , System.Nix.DerivedPath
    , System.Nix.Hash
    , System.Nix.Hash.Truncation
    , System.Nix.Signature
    , System.Nix.Store.Types
    , System.Nix.StorePath
    , System.Nix.StorePath.Metadata
  build-depends:
      base >=4.12 && <5
    , attoparsec
    , base16-bytestring >= 1.0
    , base64-bytestring >= 1.2.1
    , bytestring
    , containers
    , constraints-extras
    , data-default-class
    , dependent-sum > 0.7
    , dependent-sum-template > 0.1.1 && < 0.3
    -- Required for cryptonite low-level type convertion
    , memory
    , cryptonite
    , filepath
    , hashable
    , mtl
    , nix-derivation >= 1.1.1 && <2
    , saltine >= 0.2 && < 0.3
    , some > 1.0.5 && < 2
    , time
    , text
    , unordered-containers
    , vector
  hs-source-dirs:      src

test-suite core
  import: commons
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  other-modules:
    Derivation
    Hash
  hs-source-dirs:
    tests
  build-tool-depends:
    tasty-discover:tasty-discover
  build-depends:
      hnix-store-core
    , attoparsec
    , base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , cryptonite
    , data-default-class
    , tasty
    , tasty-golden
    , hspec
    , tasty-hspec
    , text
