cabal-version:       2.2
name:                hnix-store-json
version:             0.1.0.0
synopsis:            JSON serialization for core types
description:
  Aeson instances for core types, required for remote store protocol
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Sorki
maintainer:          srk@48.io
copyright:           2023 Sorki
category:            Nix
build-type:          Simple
extra-doc-files:
    CHANGELOG.md
extra-source-files:
    README.md
data-files:
    upstream-libstore-data/build-result/*.json
    upstream-libstore-data/realisation/*.json
    upstream-libutil-data/nars/*.nar

common commons
  ghc-options:  -Wall
  default-extensions:
      DataKinds
    , DeriveAnyClass
    , DeriveGeneric
    , DerivingVia
    , FlexibleInstances
    , ImportQualifiedPost
    , LambdaCase
    , RecordWildCards
    , StandaloneDeriving
    , TypeApplications
  default-language: Haskell2010

library
  import: commons
  exposed-modules:
      System.Nix.JSON
  build-depends:
      base >=4.12 && <5
    , aeson >= 2.0 && < 3.0
    , attoparsec
    , constraints-extras
    , containers
    , crypton
    , data-default-class
    , dependent-sum
    , deriving-aeson >= 0.2
    , hnix-store-core >= 0.8
    , monoidal-containers
    , text
    , these
    , time
  hs-source-dirs:      src

test-suite json
  import: commons
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    BuildResultSpec
    ContentAddressSpec
    DerivedPathSpec
    HashSpec
    JSONSpec
    OutputsSpecSpec
    RealisationSpec
    SingleDerivedPathSpec
    StorePathSpec
    Paths_hnix_store_json
  hs-source-dirs:
    tests
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
      base
    , hnix-store-core
    , hnix-store-json
    , hnix-store-tests
    , aeson
    , bytestring
    , constraints-extras
    , containers
    , crypton
    , data-default-class
    , dependent-sum
    , hspec
    , some
    , time
