cabal-version:       2.2
name:                hnix-store-json
version:             0.1.0.0
synopsis:            JSON serialization for core types
description:
  Aeson instances for core types, required for remote store protocol
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Sorki
maintainer:          srk@48.io
copyright:           2023 Sorki
category:            Nix
build-type:          Simple
extra-doc-files:
    CHANGELOG.md
extra-source-files:
    README.md
data-files:
    upstream-libstore-data/content-address/nar.json
    upstream-libstore-data/content-address/text.json
    upstream-libstore-data/derived-path/multi_built_built.json
    upstream-libstore-data/derived-path/multi_built_built_wildcard.json
    upstream-libstore-data/derived-path/multi_opaque.json
    upstream-libstore-data/derived-path/mutli_built.json
    upstream-libstore-data/derived-path/single_built_built.json
    upstream-libstore-data/derived-path/single_built.json
    upstream-libstore-data/derived-path/single_opaque.json
    upstream-libstore-data/outputs-spec/all.json
    upstream-libstore-data/outputs-spec/name.json
    upstream-libstore-data/outputs-spec/names.json
    upstream-libstore-data/realisation/simple.json
    upstream-libstore-data/realisation/with-dependent-realisations.json
    upstream-libstore-data/realisation/with-signature.json
    upstream-libstore-data/store-path/simple.json
    upstream-libutil-data/hash/sha256-base16.json
    upstream-libutil-data/hash/sha256-base64.json
    upstream-libutil-data/hash/sha256-nix32.json
    upstream-libutil-data/hash/simple.json

common commons
  ghc-options:  -Wall
  default-extensions:
      DataKinds
    , DeriveAnyClass
    , DeriveGeneric
    , DerivingVia
    , FlexibleInstances
    , ImportQualifiedPost
    , LambdaCase
    , RecordWildCards
    , StandaloneDeriving
    , TypeApplications
  default-language: Haskell2010

library
  import: commons
  exposed-modules:
      System.Nix.JSON
  build-depends:
      base >=4.12 && <5
    , hnix-store-core >= 0.8

    , aeson >= 2.0 && < 3.0
    , attoparsec
    , constraints-extras
    , containers
    , crypton
    , dependent-sum
    , deriving-aeson >= 0.2
    , text
    , time
  hs-source-dirs:      src

test-suite json
  import: commons
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    BuildResultSpec
    ContentAddressSpec
    DerivedPathSpec
    HashSpec
    JSONSpec
    OutputsSpecSpec
    RealisationSpec
    SingleDerivedPathSpec
    StorePathSpec
    Paths_hnix_store_json
  autogen-modules:
    Paths_hnix_store_json
  hs-source-dirs:
    tests
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
      base
    , hnix-store-core
    , hnix-store-json
    , hnix-store-tests

    , aeson
    , bytestring
    , containers
    , hspec
