cabal-version:       2.2
name:                hnix-store-remote
version:             0.6.0.0
synopsis:            Remote hnix store
description:         Implementation of the nix store using the daemon protocol.
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2018 Richard Marko
category:            Nix
build-type:          Simple
extra-source-files:
    CHANGELOG.md
  , README.md
  , README.lhs

common commons
  ghc-options:  -Wall
  default-extensions:
      DataKinds
    , DeriveGeneric
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveFoldable
    , DeriveTraversable
    , DeriveLift
    , DerivingVia
    , FlexibleContexts
    , FlexibleInstances
    , GADTs
    , RecordWildCards
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TypeSynonymInstances
    , InstanceSigs
    , KindSignatures
    , MultiParamTypeClasses
    , TupleSections
    , LambdaCase
    , BangPatterns
    , ViewPatterns
  default-language: Haskell2010

common tests
  import: commons
  build-tool-depends:
      tasty-discover:tasty-discover

flag io-testsuite
  default:
    False
  description:
    Enable testsuite, which requires external
    binaries and Linux namespace support.

flag build-derivation
  default:
    False
  description:
    Build build-derivation executable

flag build-readme
  default:
    False
  description:
    Build README.lhs example

library
  import: commons
  exposed-modules:
      Data.Serializer
    , Data.Serializer.Example
    , System.Nix.Store.Remote
    , System.Nix.Store.Remote.Arbitrary
    , System.Nix.Store.Remote.Client
    , System.Nix.Store.Remote.Logger
    , System.Nix.Store.Remote.MonadStore
    , System.Nix.Store.Remote.Serialize
    , System.Nix.Store.Remote.Serialize.Prim
    , System.Nix.Store.Remote.Serializer
    , System.Nix.Store.Remote.Socket
    , System.Nix.Store.Remote.Types
    , System.Nix.Store.Remote.Types.Activity
    , System.Nix.Store.Remote.Types.CheckMode
    , System.Nix.Store.Remote.Types.GC
    , System.Nix.Store.Remote.Types.Handshake
    , System.Nix.Store.Remote.Types.Logger
    , System.Nix.Store.Remote.Types.ProtoVersion
    , System.Nix.Store.Remote.Types.StoreConfig
    , System.Nix.Store.Remote.Types.StoreRequest
    , System.Nix.Store.Remote.Types.StoreText
    , System.Nix.Store.Remote.Types.SubstituteMode
    , System.Nix.Store.Remote.Types.TrustedFlag
    , System.Nix.Store.Remote.Types.Verbosity
    , System.Nix.Store.Remote.Types.WorkerMagic
    , System.Nix.Store.Remote.Types.WorkerOp

  build-depends:
      base >=4.12 && <5
    , hnix-store-core >= 0.8 && <0.9
    , hnix-store-nar >= 0.1
    , hnix-store-tests >= 0.1
    , attoparsec
    , bytestring
    , cereal
    , containers
    , crypton
    , data-default-class
    , dependent-sum > 0.7
    , dependent-sum-template > 0.1.1 && < 0.3
    , generic-arbitrary < 1.1
    , hashable
    , text
    , time
    , transformers
    , network
    , mtl
    , QuickCheck
    , unordered-containers
    , vector
  hs-source-dirs:      src
  ghc-options:         -Wall

executable build-derivation
  if !flag(build-derivation)
    buildable: False
  build-depends:
      base >=4.12 && <5
    , attoparsec
    , hnix-store-core
    , hnix-store-remote
    , data-default-class
    , text
  default-language: Haskell2010
  main-is: BuildDerivation.hs
  hs-source-dirs:      app
  ghc-options: -Wall -threaded -rtsopts "-with-rtsopts -N"

executable remote-readme
  if !flag(build-readme)
    buildable: False
  build-depends:
      base >=4.12 && <5
    , hnix-store-remote
  build-tool-depends:
      markdown-unlit:markdown-unlit
  default-language: Haskell2010
  main-is: README.lhs
  ghc-options: -pgmL markdown-unlit -Wall

test-suite remote
  import: tests
  type:              exitcode-stdio-1.0
  main-is:           Driver.hs
  hs-source-dirs:    tests
  ghc-options:       -Wall -threaded -rtsopts "-with-rtsopts -N"
  other-modules:
      Data.SerializerSpec
      NixSerializerSpec
      SerializeSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
      base >=4.12 && <5
    , hnix-store-core
    , hnix-store-remote
    , hnix-store-tests
    , cereal
    , crypton
    , dependent-sum > 0.7
    , some > 1.0.5 && < 2
    , text
    , time
    , hspec
    , QuickCheck
    , unordered-containers

test-suite remote-io
  import: tests

  if !flag(io-testsuite) || os(darwin)
    buildable: False

  type:              exitcode-stdio-1.0
  main-is:           Driver.hs
  hs-source-dirs:    tests-io
  -- See https://github.com/redneb/hs-linux-namespaces/issues/3
  ghc-options:       -rtsopts -fprof-auto "-with-rtsopts -V0"
  other-modules:
      NixDaemon
    , Spec
  build-tool-depends:
    tasty-discover:tasty-discover
  build-depends:
      base >=4.12 && <5
    , hnix-store-core
    , hnix-store-nar
    , hnix-store-remote
    , bytestring
    , containers
    , crypton
    , directory
    , filepath
    , hspec
    , hspec-expectations-lifted
    , linux-namespaces
    , process
    , tasty
    , tasty-hspec
    , temporary
    , text
    , unix
    , unordered-containers
